Service User/Kubernetes/service-login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-user
  template:
    metadata:
      labels:
        app: service-user
    spec:
      containers:
        - name: service-user
          image: ghcr.io/brewing-stand/service-user:master
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
