Service User/Kubernetes/service-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user-deployment
  namespace: brewingstand
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-user
  template:
    metadata:
      labels:
        app: service-user
    spec:
      containers:
        - name: service-user
          image: ghcr.io/brewing-stand/service-user:master
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secretprovider"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "service-user-secretsprovider"
