Service User/Kubernetes/service-login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-user-service
spec:
  selector:
    app: user-end
  ports:
    - port: 8080
      targetPort: 8081
  type: ClusterIP
