Service User/Kubernetes/service-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-user-service
  namespace: brewingstand
spec:
  selector:
    app: service-user
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
